merge changes, add BatchUpdateMessage